--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>org.SII</groupId>
     <artifactId>homework</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.SII</groupId>
+            <artifactId>inClassWork</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
