--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -2,7 +2,7 @@ handler = java.util.logging.ConsoleHandler, java.util.logging.FileHandler
 
 .level = ALL
 
-java.util.logging.FileHandler.level = SEVERE
+java.util.logging.FileHandler.level = INFO
 java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
 java.util.logging.FileHandler.pattern = /Users/alexandra/Scoala Informala de IT - Java/IntelliJ/HW/Hw7/src/main/resources/exceptions.log
 
