--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>com.mikemybytes</groupId>
-            <artifactId>junit5-formatted-source-tests</artifactId>
-            <version>0.2.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.mikemybytes</groupId>-->
+<!--            <artifactId>junit5-formatted-source-tests</artifactId>-->
+<!--            <version>0.2.0</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
